got it working, simpsons for life

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,12 +10,11 @@
     <script src="vendors/angular.js"></script>
     <script src="scripts/client.js"></script>
 </head>
-
 <body ng-app="myApp">
     <div ng-controller="SimpsonsController as sc">
         <h1 align="center">Quotes from the Simpson's</h1>
-
-        <div>
+        {{sc.message}}
+    </div>  
 </body>
 </body>
 
